Contact us updated

--- a/index.html
+++ b/index.html
@@ -1569,18 +1569,23 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 							<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="icon icon-map-marker1"></i>						</span>
-										<span class="elementor-icon-list-text">99 Roving St., Big City</span>
+										<span class="elementor-icon-list-text"></span>C/O HAYAT SINGH,VIPIN VIHAR UTT KHATAN,RAMNAGAR NAINITAL UR244715 IN.
 									</li>
 								<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="icon icon-envelope2"></i>						</span>
-										<span class="elementor-icon-list-text">hello@awewomesite.com</span>
+										<span class="elementor-icon-list-text">affinzy@gmail.com</span>
 									</li>
 								<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="icon icon-phone-call"></i>						</span>
-										<span class="elementor-icon-list-text">+123-234-1234</span>
+										<span class="elementor-icon-list-text">+919149338716</span>
 									</li>
+									<li class="elementor-icon-list-item">
+										<span class="elementor-icon-list-icon">
+						<i aria-hidden="true" class="icon icon-phone-call"></i>						</span>
+									<span class="elementor-icon-list-text">+917015031599</span>
+								</li>
 						</ul>
 				</div>
 				</div>
@@ -1721,7 +1726,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<section class="elementor-section elementor-inner-section elementor-element elementor-element-c55afaa elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="c55afaa" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
-					<div class="elementor-column elementor-col-20 elementor-inner-column elementor-element elementor-element-4753336" data-id="4753336" data-element_type="column">
+					<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-4753336" data-id="4753336" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-532bc93 elementor-widget elementor-widget-image" data-id="532bc93" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -1760,7 +1765,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 					</div>
 		</div>
-				<div class="elementor-column elementor-col-20 elementor-inner-column elementor-element elementor-element-0bf8217" data-id="0bf8217" data-element_type="column">
+				<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-0bf8217" data-id="0bf8217" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-ae98033 elementor-widget elementor-widget-heading" data-id="ae98033" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -1792,7 +1797,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 					</div>
 		</div>
-				<div class="elementor-column elementor-col-20 elementor-inner-column elementor-element elementor-element-6eecfd3" data-id="6eecfd3" data-element_type="column">
+				<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-6eecfd3" data-id="6eecfd3" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-a400e9d elementor-widget elementor-widget-heading" data-id="a400e9d" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -1824,7 +1829,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 					</div>
 		</div>
-				<div class="elementor-column elementor-col-20 elementor-inner-column elementor-element elementor-element-0eedfcb" data-id="0eedfcb" data-element_type="column">
+				<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-0eedfcb" data-id="0eedfcb" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-022de7b elementor-widget elementor-widget-heading" data-id="022de7b" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -1834,13 +1839,16 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				<div class="elementor-widget-container">
 					<ul class="elementor-icon-list-items">
 							<li class="elementor-icon-list-item">
-										<span class="elementor-icon-list-text">hello@awesomesite.com</span>
+										<span class="elementor-icon-list-text">affinzy@gmail.com</span>
 									</li>
 								<li class="elementor-icon-list-item">
-										<span class="elementor-icon-list-text">+123-234-1234</span>
+										<span class="elementor-icon-list-text">+917015031599</span>
+									</li>
+									<li class="elementor-icon-list-item">
+										<span class="elementor-icon-list-text">+919149338716</span>
 									</li>
 								<li class="elementor-icon-list-item">
-										<span class="elementor-icon-list-text">99 Roving St., Big City, PKU</span>
+										<span class="elementor-icon-list-text">C/O HAYAT SINGH,VIPIN VIHAR UTT KHATAN,RAMNAGAR NAINITAL UR244715 IN.</span>
 									</li>
 						</ul>
 				</div>
