--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="../../gmpg.org/xfn/11.html">
-	<title>Dytonite</title>
+	<link rel="icon" type="image/x-icon" href="assets/images/favicon.jpg">
+	<title>Affinzy</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel="alternate" type="application/rss+xml" title="Dytonite &raquo; Feed" href="feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="Dytonite &raquo; Comments Feed" href="comments/feed/index.html" />
@@ -226,7 +227,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 						<span class="elementor-button-content-wrapper">
 							<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fas fa-chevron-circle-right"></i>			</span>
-						<span class="elementor-button-text">Meet Dytonite</span>
+						<span class="elementor-button-text">Meet Affinzy</span>
 		</span>
 					</a>
 		</div>
