--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="../../gmpg.org/xfn/11.html">
-	<link rel="icon" type="image/x-icon" href="assets/images/favicon.jpg">
+	<link rel="icon" type="image/x-icon" href="assets/images/favicon.jpeg">
 	<title>Affinzy</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel="alternate" type="application/rss+xml" title="Dytonite &raquo; Feed" href="feed/index.html" />
