Google title Fixed

--- a/feed/index.html
+++ b/feed/index.html
@@ -8,7 +8,7 @@
 	>
 
 <channel>
-	<title>Dytonite</title>
+	<title>Affinzy</title>
 	<atom:link href="https://dkkit.rometheme.pro/dytonite/feed/" rel="self" type="application/rss+xml" />
 	<link>https://dkkit.rometheme.pro/dytonite</link>
 	<description></description>
@@ -22,7 +22,6 @@
 	<item>
 		<title>10 Best Social Media Marketing Agencies in Indonesia</title>
 		<link>https://dkkit.rometheme.pro/dytonite/2023/02/15/10-best-social-media-marketing-agencies-in-indonesia/</link>
-					<comments>https://dkkit.rometheme.pro/dytonite/2023/02/15/10-best-social-media-marketing-agencies-in-indonesia/#respond</comments>
 		
 		<dc:creator><![CDATA[deka]]></dc:creator>
 		<pubDate>Wed, 15 Feb 2023 06:56:59 +0000</pubDate>
