--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.jpeg">
 	<title>Affinzy</title>
 <meta name='robots' content='max-image-preview:large' />
-<link rel="alternate" type="application/rss+xml" title="Dytonite &raquo; Feed" href="feed/index.html" />
-<link rel="alternate" type="application/rss+xml" title="Dytonite &raquo; Comments Feed" href="comments/feed/index.html" />
+<link rel="alternate" type="application/rss+xml" title="Affinzy &raquo; Feed" href="feed/index.html" />
+<link rel="alternate" type="application/rss+xml" title="Affinzy &raquo; Comments Feed" href="comments/feed/index.html" />
 <script>
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/dkkit.rometheme.pro\/dytonite\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.2"}};
 /*! This file is auto-generated */
