--- a/template-kit/cases/index.html
+++ b/template-kit/cases/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <html lang="en-US">
 
-<!-- Mirrored from dkkit.rometheme.pro/dytonite/template-kit/cases/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 15 May 2023 16:51:55 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="../../../../gmpg.org/xfn/11.html">
-	<title>Cases &#8211; Dytonite</title>
+	<title>Cases &#8211; Affinzy</title>
 <meta name='robots' content='max-image-preview:large' />
-<link rel="alternate" type="application/rss+xml" title="Dytonite &raquo; Feed" href="../../feed/index.html" />
-<link rel="alternate" type="application/rss+xml" title="Dytonite &raquo; Comments Feed" href="../../comments/feed/index.html" />
+<link rel="alternate" type="application/rss+xml" title="Affinzy &raquo; Feed" href="../../feed/index.html" />
+<link rel="alternate" type="application/rss+xml" title="Affinzy &raquo; Comments Feed" href="../../comments/feed/index.html" />
 <script>
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/dkkit.rometheme.pro\/dytonite\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.2"}};
 /*! This file is auto-generated */
@@ -872,5 +871,4 @@ var ekit_config = {"ajaxurl":"https:\/\/dkkit.rometheme.pro\/dytonite\/wp-admin\
 
 </body>
 
-<!-- Mirrored from dkkit.rometheme.pro/dytonite/template-kit/cases/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 15 May 2023 16:51:56 GMT -->
 </html>
