--- a/index.html
+++ b/index.html
@@ -1088,12 +1088,7 @@
 						</div>
 						<div class="elementor-element elementor-element-041b542 elementor-widget elementor-widget-text-editor"
 							data-id="041b542" data-element_type="widget" data-widget_type="text-editor.default">
-							<div class="elementor-widget-container">
-								<p>Our services is Proin et mauris sed metus dictum tempor ut non turpis. Nullam non
-									faucibus erat. Fusce convallis, nisl nec pulvinar sollicitudin, dui ipsum aliquam
-									velit, nec dapibus quam diam eget metus. Nam malesuada nibh non velit varius, et
-									luctus mi rhoncus.</p>
-							</div>
+							
 						</div>
 						<section
 							class="elementor-section elementor-inner-section elementor-element elementor-element-fb9c371 animated-slow elementor-section-boxed elementor-section-height-default elementor-section-height-default elementor-invisible"
@@ -1806,7 +1801,7 @@
 									Industries</h2>
 							</div>
 						</div>
-						<div class="elementor-element elementor-element-8d6a265 elementor-widget elementor-widget-text-editor"
+						<!-- <div class="elementor-element elementor-element-8d6a265 elementor-widget elementor-widget-text-editor"
 							data-id="8d6a265" data-element_type="widget" data-widget_type="text-editor.default">
 							<div class="elementor-widget-container">
 								<p>Our industries is Proin et mauris sed metus dictum tempor ut non turpis. Nullam non
@@ -1830,7 +1825,7 @@
 									</a>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<div class="elementor-element elementor-element-6e94574 elementor-widget elementor-widget-spacer"
 							data-id="6e94574" data-element_type="widget" data-widget_type="spacer.default">
 							<div class="elementor-widget-container">
@@ -1941,8 +1936,7 @@
 															<div class="box-body">
 																<h5 class="elementskit-info-box-title">
 																	B2B </h5>
-																<p>We bring the right people together to challenge
-																	established thinking and drive transform in 2020</p>
+																<p>Our achievements in the B2B business include driving remarkable revenue growth, generating high-quality leads, optimizing sales funnels, and earning industry recognition for our thought leadership and client success stories.</p>
 															</div>
 
 															<div class="icon-hover">
@@ -1977,8 +1971,7 @@
 															<div class="box-body">
 																<h5 class="elementskit-info-box-title">
 																	Fintech </h5>
-																<p>We bring the right people together to challenge
-																	established thinking and drive transform in 2020</p>
+																<p>Our achievements in the Fintech industry encompass driving impressive revenue growth, delivering innovative financial solutions, fostering strategic partnerships, and earning industry recognition for our thought leadership and client success stories.</p>
 															</div>
 
 
@@ -2014,8 +2007,7 @@
 															<div class="box-body">
 																<h5 class="elementskit-info-box-title">
 																	Crypto </h5>
-																<p>We bring the right people together to challenge
-																	established thinking and drive transform in 2020</p>
+																<p>In the crypto space, our achievements include driving substantial growth in revenue, providing innovative crypto solutions, forging strategic partnerships, and gaining industry recognition for our thought leadership and successful client outcomes.</p>
 															</div>
 
 
@@ -2046,8 +2038,7 @@
 															<div class="box-body">
 																<h5 class="elementskit-info-box-title">
 																	Saas </h5>
-																<p>We bring the right people together to challenge
-																	established thinking and drive transform in 2020</p>
+																<p>Within the SaaS industry, we have achieved significant milestones, including driving remarkable revenue growth, delivering cutting-edge software solutions, establishing strategic partnerships, and earning industry recognition for our thought leadership and client success stories.</p>
 															</div>
 
 
